docs: fix align of hp buttons

--- a/website/src/css/customTheme.css
+++ b/website/src/css/customTheme.css
@@ -135,3 +135,7 @@ aside svg[class*=iconExternalLink] {
 #try {
     padding-top: 20px;
 }
+
+div.heroButtons_src-pages-index-module {
+    justify-content: inherit;
+}
